--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -15,6 +15,10 @@
 
 <ion-content padding>
 
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+
     <ion-card *ngFor='let filme of lista_filmes'>
 
         <ion-item>
@@ -51,6 +55,12 @@
             </ion-col>
         </ion-row>
 
+        <button ion-button block (click)='abrirDetalhes(filme)'>Detalhes</button>
+
     </ion-card>
+
+    <ion-infinite-scroll (ionInfinite)='doInfinite($event)'>
+        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 
 </ion-content>
